; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_rpc.c_store_gss_init_res.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_rpc.c_store_gss_init_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }
%struct.TYPE_6__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64, i32, i32, i32, %struct.TYPE_7__*)* @store_gss_init_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @store_gss_init_res(i32* %0, i64 %1, i32 %2, i32 %3, i32 %4, %struct.TYPE_7__* %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_6__, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_7__*, align 8
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_6__, align 4
  %16 = bitcast %struct.TYPE_6__* %8 to i64*
  store i64 %1, i64* %16, align 4
  store i32* %0, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %13, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 1
  store i32 %19, i32* %20, align 4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  store i32 %23, i32* %24, align 4
  %25 = load i32*, i32** %9, align 8
  %26 = bitcast %struct.TYPE_6__* %8 to i64*
  %27 = load i64, i64* %26, align 4
  %28 = call i64 @store_data_xdr(i32* %25, i64 %27)
  store i64 %28, i64* %14, align 8
  %29 = load i64, i64* %14, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %6
  %32 = load i64, i64* %14, align 8
  store i64 %32, i64* %7, align 8
  br label %55

33:                                               ; preds = %6
  %34 = load i32*, i32** %9, align 8
  %35 = load i32, i32* %10, align 4
  %36 = call i64 @krb5_store_uint32(i32* %34, i32 %35)
  store i64 %36, i64* %14, align 8
  %37 = load i64, i64* %14, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %33
  %40 = load i64, i64* %14, align 8
  store i64 %40, i64* %7, align 8
  br label %55

41:                                               ; preds = %33
  %42 = load i32*, i32** %9, align 8
  %43 = load i32, i32* %11, align 4
  %44 = call i64 @krb5_store_uint32(i32* %42, i32 %43)
  store i64 %44, i64* %14, align 8
  %45 = load i64, i64* %14, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %41
  %48 = load i64, i64* %14, align 8
  store i64 %48, i64* %7, align 8
  br label %55

49:                                               ; preds = %41
  %50 = load i32*, i32** %9, align 8
  %51 = bitcast %struct.TYPE_6__* %15 to i64*
  %52 = load i64, i64* %51, align 4
  %53 = call i64 @store_data_xdr(i32* %50, i64 %52)
  store i64 %53, i64* %14, align 8
  %54 = load i64, i64* %14, align 8
  store i64 %54, i64* %7, align 8
  br label %55

55:                                               ; preds = %49, %47, %39, %31
  %56 = load i64, i64* %7, align 8
  ret i64 %56
}

declare dso_local i64 @store_data_xdr(i32*, i64) #1

declare dso_local i64 @krb5_store_uint32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
